[package]
name = "bike-aid"
version = "0.1.0"
authors = ["Bronson <bronsonmathews@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.5", features = ["backend-android-activity-05"] }
btleplug = { version = "0.10", features = ["serde"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"

[build-dependencies]
slint-build = "1.5"

[lib]
crate-type = ["cdylib", "lib"]
