[package]
name = "bike-aid"
version = "0.1.0"
authors = ["Bronson <bronsonmathews@gmail.com>"]
edition = "2021"
build = "build.rs"


[dependencies]
# slint
slint = { version = "1.7", features = ["backend-android-activity-06"] }
tokio = { version = "1.39.1", features = ["full"] }
tokio-stream = "0.1.15"

# ble
blec = "0.3.3"
#uuid = "1.10.0"
#btleplug = { version = "0.10", features = ["serde"] }

# logs
log = "0.4.22"

# android specific
android_logger = "0.14.1"
ndk-context = "0.1.1"
jni = "0.21.1"


[build-dependencies]
slint-build = "1.7"

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
ndk-context = "0.1.1"
jni = "0.21.1"
