[package]
name = "bike-aid-mcu-rs"
version = "0.1.0"
authors = ["bronsonmathews@gmail.com"]
edition = "2021"

[dependencies]
esp-hal = { version = "0.17.0", features = [
    "async", 
    "embassy", 
    "embassy-time-timg0",
    "esp32c3"
] }

esp-backtrace = { version = "0.9.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }

esp-println = { version = "0.7.0", features = [
    "esp32c3", 
    "log"
] }

embassy-executor = { version = "0.5.0", features = [
    "nightly", 
    "integrated-timers", 
    "arch-riscv32", 
    "executor-thread"
] }

embassy-time = { version = "0.3.0"}

embassy-sync = "0.5.0"

embedded-hal-async = "1.0.0"

embedded-io-async = "0.6.1"

portable-atomic = {version = "1.5.1", default-features = false, features = ["require-cas"]}

log = "0.4.21"

static_cell = {version = "2.0.0", features = ["nightly"]}
embassy-embedded-hal = "0.1.0"
