# https://github.com/embassy-rs/embassy/blob/462daeeb4927416ed817423e91adb71c0861a83d/embassy-nrf/Cargo.toml#L64

[package]
edition = "2021"
name = "bike-aid-nrf-rs"
version = "0.1.0"
authors = ["bronsonmathews@gmail.com"]


[features] 
default = [
    "ble-l2cap",
    "ble-gatt-server",
    "ble-gatt-client",
    "ble-sec",
    "nrf52840",
]

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-sec = ["nrf-softdevice/ble-sec"]

nrf52840 = [
  "embassy-nrf/nrf52840",
  "nrf-softdevice/nrf52840",
  "nrf-softdevice/s140",
  "dep:nrf-softdevice-s140"
]


[dependencies]
# embassy
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio", "reset-pin-as-gpio"] }
embassy-embedded-hal = { version = "0.1.0" }

# log
defmt = "0.3.8"
defmt-rtt = "0.4.1"

# arm
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"

# misc
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
serde = { version = "1.0.136", default-features = false }
embedded-hal = "1.0.0"

# maths
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }

# nrf softdevice bluetooth
nrf-softdevice-s140 = { version = "0.1.2", optional = true }
nrf-softdevice = { version = "0.1.0", features = ["nrf52840", "s140", "defmt", "ble-peripheral", "ble-central", "critical-section-impl"] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
futures = { version = "0.3.29", default-features = false }
fixed = "1.24.0"
heapless = "0.8.0"
atomic-pool = "1.0.1"
static_cell = "2.0.0"

# device driver
nb = "1.1.0"
mcp4725 = "0.4.2"
ads1x1x = "0.2.2"
mpu6050 = "0.1.6"

[profile.release]
debug = 2

[patch.crates-io]
# make sure to get the latest git rev from github, you can see the latest one here:
# https://github.com/embassy-rs/embassy/commits/main/
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "f91244bae6a4b277f8464c499e50c492a7671039"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "f91244bae6a4b277f8464c499e50c492a7671039"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f91244bae6a4b277f8464c499e50c492a7671039"}
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f91244bae6a4b277f8464c499e50c492a7671039"}
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "f91244bae6a4b277f8464c499e50c492a7671039"}
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "f91244bae6a4b277f8464c499e50c492a7671039"}

nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "d5f023ba0f30d9d6779931f8a20a3c81c45b90f2"}
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "d5f023ba0f30d9d6779931f8a20a3c81c45b90f2"}
