# https://github.com/embassy-rs/embassy/blob/462daeeb4927416ed817423e91adb71c0861a83d/embassy-nrf/Cargo.toml#L64

[package]
edition = "2021"
name = "bike-aid-nrf-rs"
version = "0.1.0"
authors = ["bronsonmathews@gmail.com"]
license = ""
description = "ebike ev micro controller"
keywords = ["embedded", "async", "ebike", "scooter", "embassy"]
categories = ["embedded", "hardware-support", "no-std", "asynchronous"]
repository = "https://github.com/bit-shift-io/bike-aid"
documentation = "https://github.com/bit-shift-io/bike-aid"
default-run = "bike-aid-nrf-rs"


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'thin' # fat?
opt-level = 's'
overflow-checks = false


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[features] 
default = [
    "ble-l2cap",
    "ble-gatt-server",
    "ble-gatt-client",
    "ble-sec",
    "nrf52840",
]

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-sec = ["nrf-softdevice/ble-sec"]

nrf52840 = [
  "embassy-nrf/nrf52840",
  "nrf-softdevice/nrf52840",
  "nrf-softdevice/s140",
  "dep:nrf-softdevice-s140"
]


[dependencies]
# embedded
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"

# rtt / log
defmt = { version = "0.3.8" }
#defmt-rtt = "0.4.1" # use this if dont want to use rtt target
rtt-target = { version = "0.6.0", features = ["defmt"] } # use this if you want a input channel
panic-persist = { version = "0.3.0", features = ["custom-panic-handler", "utf8"] }
critical-section = "1.2.0"
portable-atomic = { version = "1.9.0", default-features = false }

# arm
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"

# misc
static_cell = "2.0.0"
format_no_std = "1.2.0"

# maths
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }

# nrf softdevice bluetooth
nrf-softdevice-s140 = { version = "0.1.2", optional = true }
nrf-softdevice = { version = "0.1.0", features = ["nrf52840", "s140", "defmt", "ble-peripheral", "ble-central", "critical-section-impl"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await"]}
heapless = "0.8.0"

# device driver
mcp4725-async = "0.1.0"
mpu6050-async = { version = "0.0.2", git = "https://github.com/kalkyl/mpu6050-async.git" }
embedded-ads111x = { version = "0.1.2", features = ["async"] }

# my fork
embassy-futures = { version = "0.1.1", path = "../../embassy/embassy-futures" }
embassy-sync = { version = "0.6.0", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.6.0", path = "../../embassy/embassy-executor", features = ["task-arena-size-8192", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.2.0", path = "../../embassy/embassy-nrf", features = ["defmt", "time-driver-rtc1", "gpiote", "nfc-pins-as-gpio", "nrf52840"] }
embassy-embedded-hal = { version = "0.2.0", path = "../../embassy/embassy-embedded-hal" }

# embassy
#embassy-futures = { version = "0.1.1" }
#embassy-sync = { version = "0.6.0", features = ["defmt"] }
#embassy-executor = { version = "0.6.0", features = ["task-arena-size-8192", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
#embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
#embassy-nrf = { version = "0.2.0", features = ["defmt", "time-driver-rtc1", "gpiote", "nfc-pins-as-gpio", "nrf52840"] }
#embassy-embedded-hal = { version = "0.2.0" }


[patch.crates-io]
#embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8"}
#embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8"}
#embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8"}
#embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8"}
#embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8"}
#embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "d6a8dce6eef22564160bf25b20528b8b78ec63b8"}

nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "991d28e3c61687908acc53e748191eb59d00e27a"}
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "991d28e3c61687908acc53e748191eb59d00e27a"}

rtt-target = { git = "https://github.com/probe-rs/rtt-target", rev = "5b7603b6114bb08385f71674b9d962471c221681"}
