[package]
name = "bike-aid"
version = "0.1.0"
authors = ["Bronson <bronsonmathews@gmail.com>"]
edition = "2021"
build = "build.rs"

[profile.dev]
target = "armv7-unknown-linux-androideabi"

[dependencies]
slint = { version = "1.9", features = ["backend-android-activity-06"] }
tokio = { version = "1.39.1", features = ["full"] }
tokio-stream = "0.1.15"

# ble
#blec = "0.3.3"
#uuid = "1.10.0"
btleplug = { version = "0.11.7", features = ["serde"] }
#btleplug = { version = "0.11.7", features = ["serde"], path = "../../../btleplug" }

# logs
log = "0.4.22"

# misc
once_cell = "1.20.2"
thiserror = "2.0.9"


[build-dependencies]
slint-build = "1.7"

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(target_os = "android")'.dependencies]
#jni = "0.21.1"
#jni-utils = { version = "0.1.1"} #, features = ["build-java-support"] }
android_logger = "0.14.1"
ndk-context = "0.1.1"
jni = "0.19.0" # dont change this, we need it to be the same as jni-utils version
