[package]
name = "bike-aid"
version = "0.1.0"
authors = ["Bronson <bronsonmathews@gmail.com>"]
edition = "2021"
build = "build.rs"
readme = "README.md"

#[profile.dev]
#target = "armv7-unknown-linux-androideabi"

[dependencies]
slint = { version = "1.9.1" }
tokio = { version = "1.39.1", features = ["full"] }
tokio-stream = "0.1.15"

# ble
#blec = "0.3.3"
#uuid = "1.10.0"
btleplug = { version = "0.11.7", features = ["serde"] }
#btleplug = { version = "0.11.7", features = ["serde"], path = "../../../btleplug" }

# logs
log = "0.4.22"

# misc
once_cell = "1.20.2"
thiserror = "2.0.9"


[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
env_logger = "0.10"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log =  { version = "1.0", features = ["color"] }


[target.'cfg(target_os = "android")'.dependencies]
#jni = "0.21.1"
jni-utils = { version = "0.1.1"} #, features = ["build-java-support"] }
android_logger = "0.14.1"
ndk-context = "0.1.1"
jni = "0.19.0" # dont change this, we need it to be the same as jni-utils version
#ndk = "0.9.0"


[build-dependencies]
slint-build = "1.9.1"


[features]
default = []
web = []
desktop = []
android = [ "slint/backend-android-activity-06" ]
#full = ["desktop", "qrcode", "database", "cutil/full"]


[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/desktop.rs"
name = "slint-template"
required-features = ["desktop"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true


####################
# cargo apk config #
####################

[package.metadata.android]
# Specifies the package property of the manifest.
package = "com.foo.bar"

# Specifies the array of targets to build for.
build_targets = [ "aarch64-linux-android" ]

# Path to your application's resources folder.
# If not specified, resources will not be included in the APK.
#resources = "path/to/resources_folder"

# Path to the folder containing your application's assets.
# If not specified, assets will not be included in the APK.
#assets = "path/to/assets_folder"

# Name for final APK file.
# Defaults to package name.
#apk_name = "myapp"

# Folder containing extra shared libraries intended to be dynamically loaded at runtime.
# Files matching `libs_folder/${android_abi}/*.so` are added to the apk
# according to the specified build_targets.
#runtime_libs = "path/to/libs_folder"

# See https://developer.android.com/guide/topics/manifest/uses-sdk-element
#
# Defaults to a `min_sdk_version` of 23 and `target_sdk_version` of 30 (or lower if the detected NDK doesn't support this).
[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 31
#max_sdk_version = 31

# See https://developer.android.com/guide/topics/manifest/uses-feature-element
#
# Note: there can be multiple .uses_feature entries.
[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

# See https://developer.android.com/guide/topics/manifest/uses-permission-element
#
# Note: there can be multiple .uses_permission entries.
#[[package.metadata.android.uses_permission]]
#name = "android.permission.WRITE_EXTERNAL_STORAGE"
#max_sdk_version = 18

# See https://developer.android.com/guide/topics/manifest/queries-element#provider
#[[package.metadata.android.queries.provider]]
#authorities = "org.khronos.openxr.runtime_broker;org.khronos.openxr.system_runtime_broker"
# Note: The `name` attribute is normally not required for a queries provider, but is non-optional
# as a workaround for aapt throwing errors about missing `android:name` attribute.
# This will be made optional if/when cargo-apk migrates to aapt2.
#name = "org.khronos.openxr"

# See https://developer.android.com/guide/topics/manifest/queries-element#intent
#[[package.metadata.android.queries.intent]]
#actions = ["android.intent.action.SEND"]

# See https://developer.android.com/guide/topics/manifest/queries-element#intent
# Note: there can be several .data entries.
#[[package.metadata.android.queries.intent.data]]
#mime_type = "image/jpeg"

# See https://developer.android.com/guide/topics/manifest/queries-element#package
#[[package.metadata.android.queries.package]]
#name = "org.freedesktop.monado.openxr_runtime.in_process"

# See https://developer.android.com/guide/topics/manifest/application-element
#[package.metadata.android.application]

# See https://developer.android.com/guide/topics/manifest/application-element#debug
#
# Defaults to false.
#debuggable = false

# See https://developer.android.com/guide/topics/manifest/application-element#theme
#
# Example shows setting the theme of an application to fullscreen.
#theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

# Virtual path your application's icon for any mipmap level.
# If not specified, an icon will not be included in the APK.
#icon = "@mipmap/ic_launcher"

# See https://developer.android.com/guide/topics/manifest/application-element#label
#
# Defaults to the compiled artifact's name.
label = "Application Name"

# See https://developer.android.com/guide/topics/manifest/meta-data-element
#
# Note: there can be several .meta_data entries.
# Note: the `resource` attribute is currently not supported.
#[[package.metadata.android.application.meta_data]]
#name = "com.samsung.android.vr.application.mode"
#value = "vr_only"

# See https://developer.android.com/guide/topics/manifest/activity-element
[package.metadata.android.application.activity]

# See https://developer.android.com/guide/topics/manifest/activity-element#nm
#
# The name of the class that implements the activity, a subclass of Activity
#
# Defaults to "android.app.NativeActivity"
# name = "android.app.MyActivity"

# See https://developer.android.com/guide/topics/manifest/activity-element#config
#
# Defaults to "orientation|keyboardHidden|screenSize".
#config_changes = "orientation"

# See https://developer.android.com/guide/topics/manifest/activity-element#label
#
# Defaults to the application's label.
#label = "Activity Name"

# See https://developer.android.com/guide/topics/manifest/activity-element#lmode
#
# Defaults to "standard".
#launch_mode = "singleTop"

# See https://developer.android.com/guide/topics/manifest/activity-element#screen
#
# Defaults to "unspecified".
#orientation = "landscape"

# See https://developer.android.com/guide/topics/manifest/activity-element#exported
#
# Unset by default, or "true" when targeting Android >= 31 (S and up).
#exported = "true"

# See https://developer.android.com/guide/topics/manifest/meta-data-element
#
# Note: there can be several .meta_data entries.
# Note: the `resource` attribute is currently not supported.
#[[package.metadata.android.application.activity.meta_data]]
#name = "com.oculus.vr.focusaware"
#value = "true"

# See https://developer.android.com/guide/topics/manifest/intent-filter-element
#
# Note: there can be several .intent_filter entries.
#[[package.metadata.android.application.activity.intent_filter]]
# See https://developer.android.com/guide/topics/manifest/action-element
#actions = ["android.intent.action.VIEW", "android.intent.action.WEB_SEARCH"]
# See https://developer.android.com/guide/topics/manifest/category-element
#categories = ["android.intent.category.DEFAULT", "android.intent.category.BROWSABLE"]

# See https://developer.android.com/guide/topics/manifest/data-element
#
# Note: there can be several .data entries.
# Note: not specifying an attribute excludes it from the final data specification.
#[[package.metadata.android.application.activity.intent_filter.data]]
#scheme = "https"
#host = "github.com"
#port = "8080"
#path = "/rust-windowing/android-ndk-rs/tree/master/cargo-apk"
#path_prefix = "/rust-windowing/"
#mime_type = "image/jpeg"