[package]
name = "jni-utils"
version = "0.1.1"
authors = ["Gedgy Gedgy <gedgygedgy@protonmail.com>", "Kyle Machulis <kyle@nonpolynomial.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Extra Utilities for JNI in Rust"
readme = "README.md"
repository = "https://github.com/deviceplug/jni-utils-rs"
homepage = "https://github.com/deviceplug/jni-utils-rs"


[lib]
path = "rust/lib.rs"

[features]
build-java-support = []

[dependencies] 
# This needs to stay at 0.19.0 until we either update for the new jni-rs or move off this library
# entirely.
jni = "0.19.0"
static_assertions = "1.1.0"
uuid = "1.4.0"
futures = "0.3.28"
dashmap = "5.4.0"
once_cell = "1.18.0"
log = "0.4.19"

[dev-dependencies]
lazy_static = "1.4.0"
